# rev

./: .coveragerc  .dev_agent.env  .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  BRITTLE_DETECTION_REMOVAL.md  BUILD_OPTIMIZATION_FOR_TESTS.md  CACHE_INVALIDATION_FIXES.md  CODE_REUSE_IMPROVEMENTS.md  COMPLETE_STALE_STATE_FIX_SUMMARY.md  COVERAGE.md  DOCUMENTATION_GUIDE.md  FINAL_RECOMMENDATIONS.md  FIX_IMPLEMENTATION_COMPLETE.md  FLEXIBILITY_IMPROVEMENTS.md  GPT_OSS_ANALYSIS_20251225_135034.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_QUICK_REFERENCE.md  LOOP_GUARD_TDD_FIX.md  MANIFEST.in  Makefile  OLLAMA_TOOL_CHOICE_FIX.md  OPTIMIZATION_OPPORTUNITIES.md  PROVIDER_COMPLIANCE_SUMMARY.md  QUICK_START_DEV.md  README-agent-min.md  README.md  RECOMMENDATIONS.md  SESSION_SUMMARIZATION.md  SHARED_ROOT_CAUSE_FIX.md  STEP_BY_STEP_EXECUTION_IMPLEMENTED.md  SUBAGENT_IMPLEMENTATION_SUMMARY.md  SUB_AGENT_FIXES.md  TESTING_STRATEGY.md  TEST_COMMAND_VALIDATION_FIX.md  TEST_PLAN.md  TEST_RUN_COMPARISON_REPORT.md  TEST_VALIDATION_SUMMARY.md  (+26 more)
.claude/: settings.local.json
.rev-metrics/: metrics.jsonl
.rev_sessions/: session_1765298807.json
docs/: ACTION_FEEDBACK_SYSTEM.md  ADAPTIVE_PROMPT_OPTIMIZATION.md  ADVANCED_PLANNING.md  ALL_FIXES_SUMMARY.md  ANALYSIS_TOOLS.md  ARCHITECTURE.md  BUG_FIXING_GUIDE.md  BUILDING.md  CACHING.md  CODEBASE_GUIDE.md  CODE_REFERENCE_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COVERAGE.md  CRITICAL_FIXES_QUICK_REFERENCE.md  CRITICAL_FIXES_SUMMARY.md  DEFAULT_MCP_SERVERS.md  DESTRUCTIVE_OPERATIONS_FIX.md  DEVELOPMENT.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUPLICATE_FILE_PREVENTION_FIX.md  EDIT_OPTIMIZATIONS_IMPLEMENTED.md  EXECUTION_MODES.md  FEATURE_CRIT_JUDGE.md  FEATURE_DOD.md  FEATURE_MULTI_STAGE_VERIFICATION.md  FEATURE_TOOL_ROBUSTNESS.md  FEATURE_TRANSACTIONAL_EXECUTION.md  FILE_PATH_VISIBILITY_FIX.md  FIX_SUMMARY.md  FRAMEWORK_SWITCHING_FIX.md  GEMINI_COMPLETE_FIX.md  GEMINI_PLANNER_FIX.md  GEMINI_SCHEMA_FIX.md  IDE_INTEGRATION.md  IMPLEMENTATION_PLAN_MACI_FEATURES.md  (+45 more)
(+457 files in other folders)
